# ros2

./: .gitignore  AGENT_CONVENTIONS.md  README.md  pointcloud_publisher.cpp  setup_robot_dev.sh  setup_robot_dev_wsl.sh  task_manager.py
hc_sr04_driver/: CMakeLists.txt  package.xml
hc_sr04_driver/src/: hc_sr04_laserscan_node.cpp
motor_control_node/: package.xml  setup.py
motor_control_node/launch/: motor_control.launch.py
motor_control_node/motor_control_node/: motor_control_node.py
power_monitor/: CMakeLists.txt  package.xml  setup.cfg  setup.py
power_monitor/analysis/: energy_stats.py  power_analysis.py  utils.py
power_monitor/analysis/TEST_CPUvsFPGA_LONG_RUN/: power_analysis_LONG_RUN.py
power_monitor/analysis/TEST_CPUvsFPGA_energy/figures/: statistical_tests.csv
power_monitor/analysis/TEST_CPUvsFPGA_energy_vs2/figures/: statistical_tests.csv
power_monitor/analysis/csv_logs/: node_system_CPU.csv  node_system_FPGA.csv  power_log_20260421_174314.csv  power_log_20260421_175002.csv  power_log_20260421_183919.csv  power_log_20260422_153404.csv  power_log_20260422_153631.csv  power_log_20260422_155345.csv  power_log_20260422_155753.csv  power_log_20260422_161202.csv  power_log_20260422_162227.csv  power_log_20260422_163657.csv  power_log_20260422_165744.csv  power_log_20260422_171224.csv  power_log_20260422_172425.csv  power_log_20260422_173206.csv  power_log_20260422_185555.csv  power_log_20260422_195403.csv  power_log_20260422_195826.csv  power_log_20260422_200543.csv  power_log_20260422_201109.csv  power_log_20260422_201526.csv  power_log_20260422_202511.csv  power_log_20260422_203832.csv  power_log_20260422_205038.csv  power_log_20260422_210852.csv  power_log_20260422_212114.csv  power_log_20260422_212646.csv  power_log_20260422_215513.csv  power_log_20260422_224549.csv  power_log_20260422_231501.csv  power_log_20260424_103149.csv  power_log_20260424_105301.csv  power_log_20260424_112550.csv  power_log_20260424_122818.csv  power_log_20260424_123616.csv  power_log_20260424_124354.csv  power_log_20260424_133346.csv  power_log_20260424_135305.csv  power_log_20260424_135857.csv  (+11 more)
power_monitor/analysis/csv_logs/Comparison/: power_log_20260508_000456.csv
power_monitor/analysis/csv_logs/FPGA/: power_log_20260507_095849.csv  power_log_20260507_101249.csv  power_log_20260507_124918.csv  power_log_20260507_130154.csv  power_log_20260507_135806.csv  power_log_20260507_142348.csv  power_log_20260507_143445.csv  power_log_20260507_153435.csv  power_log_20260507_154230.csv  power_log_20260507_155056.csv  power_log_20260507_165258.csv  power_log_20260507_170151.csv  power_log_20260507_171701.csv  power_log_20260507_174422.csv  power_log_20260507_175630.csv  power_log_20260507_181341.csv  power_log_20260507_182959.csv  power_log_20260507_212216.csv  power_log_20260507_212248.csv  power_log_20260507_213505.csv  power_log_20260507_214345.csv  power_log_20260507_215444.csv  power_log_20260507_220444.csv  power_log_20260507_221539.csv  power_log_20260507_222648.csv  power_log_20260507_223759.csv  power_log_20260507_224904.csv  power_log_20260507_230004.csv  power_log_20260507_231059.csv  power_log_20260508_011053.csv  power_log_20260508_012144.csv  power_log_20260508_025447.csv  power_log_20260508_032729.csv  power_log_20260508_034931.csv  power_log_20260508_043239.csv  power_log_20260508_060603.csv  power_log_20260508_072708.csv  power_log_20260508_083754.csv  power_log_20260508_090546.csv  power_log_20260508_093520.csv  (+11 more)
power_monitor/analysis/csv_logs/Python/: power_log_20260501_170217.csv  power_log_20260502_073112.csv  power_log_20260503_193857.csv  power_log_20260503_205857.csv  power_log_20260504_002235.csv  power_log_20260506_164702.csv  power_log_20260506_183257.csv  power_log_20260506_184329.csv  power_log_20260506_191503.csv  power_log_20260506_194618.csv  power_log_20260507_033709.csv  power_log_20260507_051150.csv  power_log_20260507_052833.csv  power_log_20260507_080149.csv  power_log_20260507_080530.csv  power_log_20260507_084425.csv  power_log_20260507_085159.csv  power_log_20260507_093131.csv  power_log_20260507_094552.csv  power_log_20260507_094804.csv  power_log_20260507_095306.csv  power_log_20260507_103355.csv  power_log_20260507_104716.csv  power_log_20260507_110257.csv  power_log_20260507_112216.csv  power_log_20260507_193922.csv  power_log_20260507_202706.csv  power_log_20260507_203903.csv  power_log_20260507_210115.csv  power_log_20260508_052141.csv  power_log_20260508_100045.csv  power_log_20260508_112714.csv  power_log_20260508_132013.csv  power_log_20260508_184533.csv  power_log_20260508_185121.csv  power_log_20260508_185821.csv  power_log_20260508_190351.csv  power_log_20260508_192654.csv  power_log_20260508_194742.csv  power_log_20260508_214132.csv  (+14 more)
power_monitor/analysis/csv_logs/snn/: snn_logger_20260509_004901.csv  snn_logger_20260509_005817.csv  snn_logger_20260509_024228.csv  snn_logger_20260509_024902.csv  (+5 more)
power_monitor/analysis/figures/: statistical_tests.csv
power_monitor/launch/: power_nodes.launch.py
power_monitor/power_monitor/: fpga_power_node.py  ina219.py  power_logger_node.py  snn_logger_node.py  system_power_node.py
python_snn_node/: package.xml  setup.cfg  setup.py
python_snn_node/config/: params.yaml  weights.mem  weights_current.mem
python_snn_node/launch/: snn.launch.py
python_snn_node/python_snn_node/: LIF.py  LIF_SNN_network.py  __init__.py  csv_logger.py  network.py  python_snn_node.py  reward_system.py  snn_comparator.py  snn_node.py  weights_logger.py
python_snn_node/scripts/: benchmark.py  comprehensive_trace.csv  input_stimulus.mem  snn_testbench.py  sparse_trace.csv  weights_init.mem
python_snn_node/test/: sweep_lr_dop.py  sweep_structural.py  test_rstdp_signs.py
taskbot_vision/: package.xml  setup.cfg  setup.py
taskbot_vision/launch/: vision_launch.py
taskbot_vision/taskbot_vision/: OCCUPANCY_GRID_DOCS.md  VISION_SYSTEM_DOCS.md  aruco_detector.py  feature_encoding.py  generate_aruco_markers.py  mock_camera_node.py  occupancy_grid_generator.py  occupancy_grid_node.py  vision_node.py
uart/: setup.py  (+1 more)
(+167 files in other folders)
