<?xml version="1.0"?>
<package format="3">
  <name>power_monitor</name>
  <version>0.0.1</version>
  <description>Power monitor nodes using INA219 and Vector3 messages.</description>

  <maintainer email="henrik.torkildsen@gmail.com">Henrik</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-smbus</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>