
[develop]
script_dir=$base/lib/python_snn_node

[install]
install_scripts=$base/lib/python_snn_node

[metadata]
name = python_snn_node
version = 0.0.1
description = LIF SNN node with rSTDP
license = MIT

[options]
packages = find:
install_requires =
    numpy
    rclpy
    std_msgs
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    python_snn_node = python_snn_node.python_snn_node:main

# Installer ROS 2-typiske datafiler (ament index, package.xml, launch, config)
[options.data_files]
# Registrer pakken i ament index:
share/ament_index/resource_index/packages =
    resource/python_snn_node    
# Installer package.xml:
share/python_snn_node =
    package.xml
# Installer launch- og config-filer (hvis de finnes):
share/python_snn_node/launch =
    launch/snn.launch.py
share/python_snn_node/config =
    config/params.yaml

