[metadata]
name = python_snn_node
version = 0.0.1
description = LIF SNN node with rSTDP
license = Apache-2.0

[options]
packages = find:
install_requires =
    numpy
    rclpy
    std_msgs
    geometry_msgs
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    python_snn_node = python_snn_node.snn_node:main

[develop]
script_dir=$base/lib/python_snn_node

[install]
install_scripts=$base/lib/python_snn_node

[options.data_files]
share/ament_index/resource_index/packages =
    resource/python_snn_node

share/python_snn_node =
    package.xml

share/python_snn_node/launch =
    launch/snn.launch.py

share/python_snn_node/config =
    config/params.yaml